--- a/htmlWorld.html
+++ b/htmlWorld.html
@@ -18,9 +18,9 @@
 <strong>The code used </strong>to make them visually appealing is known as CSS and we shall focus on this in a later tutorial. For now, we will focus on teaching you how to build rather than design.
 Hypertext means that the document contains links that allow the reader to jump to other places in the document or to another document altogether. The latest version is known as HTML5.
 
-<em>A Markup Language is a way that computers speak </em>to each other to control how text is processed and presented. <a title="click to open a new tab" href="http://google.com" target="_blank">To do this </a>HTML uses two things: tags and attributes.
+<em>A Markup Language is  way that computers speak </em>to each other to control how text is processed and presented. <a title="click to open a new tab" href="http://google.com" target="_blank">To do this </a>HTML uses two things: tags and attributes.
 </p>
-
+<p>html log form</p>
 <p>
 	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
