about:header,footer,aside,article,section,small tg

--- a/htmlWorld.html
+++ b/htmlWorld.html
@@ -5,6 +5,8 @@
 	<title>HTML PAGE</title>
 </head>
 <body>
+	<a href="htmllog.html">Go to htmllog</a>
+	<hr>
 	<!-- heading -->
 <h1  align="center"> Html@world</h1>
 <h2 align="center"> Html@world</h2>
