use ifarme, and table element(th,td,etc)

--- a/table.html
+++ b/table.html
@@ -73,6 +73,8 @@ tr {
     <td >Italy</td>
   </tr>
 </table>
-
+ <br>
+ <p><a href="htmllog.html" target="show"> header tag</a></p>
+    <iframe src="C:\Users\Alka\Downloads\img_car.jpg" name="show" height="400px" width="100%" title="about header tag"></iframe>
 </body>
 </html>
