--- a/table.html
+++ b/table.html
@@ -38,10 +38,10 @@ tr {
     <th>Country</th>
   </tr>
   <tr>
-    <td>Alfreds Futterkiste</td>
-    <td>Maria Anders</td>
+    <td>alka</td>
+    <td>23497275</td>
     <td></td>
-    <td>Germany</td>
+    <td>gkp</td>
   </tr>
   <tr>
     <td>Centro comercial Moctezuma</td>
